src/index.scss
$background-dark-blue: rgb(28,  41, 56);
html, body, #root {
  margin: 0;
  height: 100%;
  font-family: Tahoma,Arial,Verdana,Helvetica,"Bitstream Vera Sans",sans-serif;
  font-size: 15px;
  background-color: $background-dark-blue;
}

.loading{
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  width: 100%;

  .spinner {
    padding-bottom: 40px;
    padding-left: 40px;
    height: 100px;

    width: 100px;
    font-size: 100px;
    animation:spin 4s linear infinite;
    color: gray;
    // background-color: #518d6a;
  }
}

main {
  display: flex;
}

.left {
  flex-shrink: 0;
}

.right {
  flex-grow: 1;
  position: sticky;
  top: 0px;
  height: 90%;

  h1:first-of-type {
    font-size: 15px;
    color: #5aadbb;
  }
}


@media (max-width: 1250px) {
  .right {
    display: none;
  }
}

@keyframes spin {
  from {
      transform:rotate(0deg);
  }
  to {
      transform:rotate(360deg);
  }
}

.dark {
  background-color: $background-dark-blue;
  color: #eee0e0;
}

.light {
  background-color: #ffffff;
  color: #7e7070;
}

.displayModes {
  display: flex;
  justify-content: right;
}

.feeds {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: space-around;
    width: -moz-fit-content;
  }

.feed {
  position: relative;
  border: 1px solid lightgray;
  margin: 2px;
  padding: 5px;

  img {
    height: 16px;
  }
  .title {
    margin: 0 0 5px 0;
    display: flex;
    justify-content: space-between;
  }
}

.dark a {
  color: #eee0e0;
}

.light a {
  color: #7e7070;
}

a {
  cursor: pointer;
  font-style: normal;
  font-weight: normal;
  font-size: 13px;
  line-height: 0.8em;
  font-size-adjust: none;
  font-stretch: normal;
  -x-system-font: none;
  font-feature-settings: normal;
  font-language-override: normal;
  font-kerning: auto;
  font-synthesis: weight style;
  font-variant-alternates: normal;
  font-variant-caps: normal;
  font-variant-east-asian: normal;
  font-variant-ligatures: normal;
  font-variant-numeric: normal;
  font-variant-position: normal;
  text-decoration: none;
  // color: #7e7070;

  &:hover {
    color: #5aadbb;
  }
}

.date {
  font-size: 12px;
}

div.close-bottom-right {
  position: absolute;
  bottom: 0px;
  right: 0px;
  opacity: 0.5;
  padding: 5px;
}

@media (min-width: 1250px) {
  div.close-bottom-right {
    display: none;
  }
}

.text-badge {
    cursor: pointer;
    display: inline-block;
    position: relative;
    padding: 0px 3px 0px;
    min-width: 12px;
    margin-left: 12px;
    border-radius: 3px;
    white-space: nowrap;
    overflow: hidden;
    background-color: #7e7070;
    &.open {
      background-color: #518d6a;
    }
    &.refresh {
      background-color: steelblue;
    }
    &.close {
      background-color: #f19c4c;
    }
    a {
        font-size: 14px;
        font-family: inherit;
        color: white;
        &.emoji-light {
          color: transparent;
          text-shadow: 0 0 0 #cfcdcd;
        }
        &:hover {
          color: #5aadbb;
        }
    }
}

img.feed-icon {
  margin: 10px;
}

.settings a {
  margin: 10px;
  color: grey;
}

.invidious {
	vertical-align: bottom;
}

@media (min-width: 1250px) {
  .youtube {
    display: none;
  }

  .link:hover {
    & .youtube {
      display: inline;
    }
  }
}

